--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>project.personal</groupId>
-    <artifactId>TelegramBotApi</artifactId>
+    <artifactId>telegram_bot_api</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
